spacing fix

--- a/style.css
+++ b/style.css
@@ -131,8 +131,10 @@ body {
   background-color: var(--clr-neutral-100);
   color: var(--clr-nectarine-500);
   line-height: 1;
-  padding-top: 2rem;
+  padding-top: 1.75rem;
   font-weight: var(--fw-med);
+  letter-spacing: 2px;
+  font-size: 1.75vh;
 }
 
 .warm-nights .banner__headergroup {
@@ -172,10 +174,10 @@ body {
 }
 
 .banner__formats {
-  font-size: 6vw;
+  font-size: 7vw;
 
   letter-spacing: 2px;
-  padding: 0 1rem;
+  padding: 0.25rem 0.5rem;
 }
 
 .btn-parent {
